The code decoding std::optional<ImagePaintingOptions> can't be compiled by PlayStation due to the ImagePaintingOptions template constructor https://bugs.webkit.org/show_bug.cgi?id=231980

Reviewed by Ross Kirsling.

PlayStation clang can't compile the following code.
> std::optional<ImagePaintingOptions> val;
> decoder >> val;

It reports the following error.
> include\type_traits:3825:31: error: no member named 'value' in 'std::is_convertible<optional<WebCore::ImagePaintingOptions> &, WebCore::ImagePaintingOptions>'

* platform/graphics/ImagePaintingOptions.h:
(WebCore::ImagePaintingOptions::ImagePaintingOptions): Use SFINAE
for the first template constructor not to conflict with the second
one.

Canonical link: https://commits.webkit.org/243308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284566 268f45cc-cd09-0410-ab3c-d52691b4dbfc